--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </div>
 
 
-  <div class="card4-3"> <a target="_blank" href="">
+  <div class="card4-3"> <a target="_blank" href="https://felypesposito.github.io/Atividade-Plovooo/HTML/Aquaticos.HTML">
     <div class="card4-3-image"></div>
       <div class="card4-3-description">
         <p class="text-title4-3">Plovooo - Wiki de Animais</p>
@@ -113,8 +113,8 @@
 
 <h2 class="titulocontainer5">Sobre Fotografia</h2>
 
-<div class="conteudo1container5"><img src="IMG/pfp.jpg" alt=""></div>
-<div class="conteudo3container5"><img src="IMG/gabinha.JPG" alt=""></div>
+<div class="conteudo1container5"><img src="IMG/naotaindo.JPG" alt="aaaa"></div>
+<div class="conteudo3container5"><img src="IMG/gabinha.JPG" alt="aaaa"></div>
 <div class="conteudo2container5"><img src="IMG/olhoana.JPG" alt=""></div>
 
 
