descrição da foto

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <h2 class="titulocontainer5">Sobre Fotografia</h2>
 
 <div class="conteudo1container5"><img src="IMG/naotaindo.JPG" alt="aaaa"></div>
-<div class="conteudo3container5"><img src="IMG/olhinhodagab.jpg" alt="gabinha"></div>
+<div class="conteudo3container5"><img src="IMG/olhinhodagab.jpg" alt="coooooooooooooooooooo"></div>
 <div class="conteudo2container5"><img src="IMG/olhoana.JPG" alt=""></div>
 
 
