adicionando responsividade e detalhes extras

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
  <div class="header">
 
   <button class="cta1">
-    <span class="hover-underline-animation"><a href="#titulocontainer2">Quem Sou Eu? </a> </span>
+    <span class="hover-underline-animation"><a class="titulocontainer-1" href="#titulocontainer2">Sobre </a> </span>
   </button>
   
   <button class="cta2">
-    <span class="hover-underline-animation"><a href="#meusprojetos">Meus Projetos</a></span>
+    <span class="hover-underline-animation"><a class="titulocontainer-2" href="#meusprojetos">Projetos</a></span>
   </button>
 
   
   <button class="cta3">
-    <span class="hover-underline-animation"><a href="#fotografia">Fotografia</a></span>
+    <span class="hover-underline-animation"><a class="titulocontainer-3" href="#fotografia">Fotografia</a></span>
   </button>
 
   <button class="cta4">
-    <span class="hover-underline-animation"><a href="#entrecontato">Contato</a></span>
+    <span class="hover-underline-animation"><a class="titulocontainer-4" href="#entrecontato">Contato</a></span>
   </button>
 
  </div>
@@ -72,11 +72,6 @@
 <div class="container4" id="meusprojetos">
   <h2 class="titulocontainer4">Meus Projetos</h2>
 
-    <!-- <div class="conteudo1container4"><img src="IMG/bootstrap print.png" alt="" width="100%" height="100%"></div> 
-
-    <div class="conteudo2container4"><img src="IMG/print portfolio.png" alt="" width="100%" height="100%"></div>
-
-    <div class="conteudo3container4"><img src="IMG/print plovo.png" alt="" width="100%" height="100%"></div>  -->
 
     <div class="cardc4-1"><a target="_blank" href="https://felypesposito.github.io/bootstrap/">
       <div class="cardc4-1-image"></div>
